modal overflow fix

--- a/src/pages/Admin/_admin.scss
+++ b/src/pages/Admin/_admin.scss
@@ -63,3 +63,10 @@
 .shrink {
     transform: scale(0.1);
 }
+
+.admin .anna-modal form{
+    min-height: 40vh;
+    max-height: 90vh;
+    overflow-y: auto;
+    overflow-x: hidden;
+}
